kustomize/apps/ingress-test/service copy.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
