kustomize/apps/ingress-test/ingress copy.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: test
spec:
  ingressClassName: nginx
  rules:
    - host: test.hbvu.local
      http:
        paths:
          - path: /           
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
